# ipa-tui

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ipa_tui/: __main__.py  app.py  auth.py  cli.py  client.py  config.py
src/ipa_tui/screens/: login.py  main.py
src/ipa_tui/widgets/: detail.py  sidebar.py
styles/: app.tcss
tests/: test_auth.py  test_cli.py  test_config.py
