[project]
name = "ipa-tui"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "textual>=1.0",
    "python-freeipa>=1.0.10",
]

[project.scripts]
ipa-tui = "ipa_tui.cli:cli_main"

[dependency-groups]
dev = [
    "ruff>=0.9",
    "mypy>=1.14",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ipa_tui"]

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["attr-defined"]

[tool.pytest.ini_options]
testpaths = ["tests"]
